# as_core

./: .gitignore  CMakeLists.txt  README.md  Updating legion_spell.md  revision_data.h.in.cmake
src/server/scripts/BrokenIsles/: CMakeLists.txt  legion_worldbosses.cpp  legion_worldbosses.hpp  zone_dalaran_legion.cpp  zone_dalaran_legion.h  zone_highmountain.cpp  zone_mardum.cpp  zone_mardum.h  zone_stormheim.cpp  zone_valsharah.cpp  zone_valsharah.h
src/server/scripts/BrokenIsles/AntorusTheBurningThrone/: antorus_the_burning_throne.cpp  antorus_the_burning_throne.hpp  boss_aggramar.cpp  boss_antoran_high_command.cpp  boss_argus_the_unmaker.cpp  boss_eonar_the_life_binder.cpp  boss_eonar_the_life_binder.hpp  boss_felhounds_of_sargeras.cpp  boss_garothi_worldbreaker.cpp  boss_imonar_the_soulhunter.cpp  boss_kin_garoth.cpp  boss_portal_keeper_hasabel.cpp  boss_the_coven_of_shivarra.cpp  boss_varimathras.cpp  instance_antorus_the_burning_throne.cpp
src/server/scripts/BrokenIsles/ArtifactQuestlines/: CMakeLists.txt  paladin_artifact_questline.cpp
src/server/scripts/BrokenIsles/BlackRookHold/: black_rook_hold_dungeon.hpp  boss_illysanna_ravencrest.cpp  boss_lord_kurtalos_ravencrest.cpp  boss_smashspite_the_hateful.cpp  boss_the_amalgam_of_souls.cpp  instance_black_rook_hold_dungeon.cpp
src/server/scripts/BrokenIsles/BrokenShore/: broken_shore.cpp  broken_shore.hpp  broken_shore_bosses.cpp  broken_shore_invasions.cpp  broken_shore_invasions.hpp  the_sentinax.cpp  the_sentinax.hpp
src/server/scripts/BrokenIsles/CathedralOfEternalNight/: boss_agronox.cpp  boss_domatrax.cpp  boss_mephistroth.cpp  boss_thrasbite_the_scornful.cpp  cathedral_of_eternal_night.cpp  cathedral_of_eternal_night.hpp  instance_cathedral_of_eternal_night.cpp
src/server/scripts/BrokenIsles/ClassHall/: ClassHallUpgrades.cpp  ClassHallUpgrades.h  ShipmentContainer.cpp  ShipmentContainer.hpp
src/server/scripts/BrokenIsles/CourtOfStars/: boss_advisor_melandrus.cpp  boss_patrol_captain_gerdo.cpp  boss_talixae_flamewreath.cpp  court_of_stars.cpp  court_of_stars.hpp  instance_court_of_stars.cpp
src/server/scripts/BrokenIsles/DarkHeartThicket/: boss_arch_druid_glaidalis.cpp  boss_dresaron.cpp  boss_oakheart.cpp  boss_shade_of_xavius.cpp  darkheart_thicket.cpp  darkheart_thicket.hpp  instance_darkheart_thicket.cpp
src/server/scripts/BrokenIsles/EyeOfAzshara/: boss_king_deepbeard.cpp  boss_lady_hatecoil.cpp  boss_serpentrix.cpp  boss_warlord_parjesh.cpp  boss_wrath_of_azshara.cpp  eye_of_azshara.hpp  instance_eye_of_azshara.cpp
src/server/scripts/BrokenIsles/HallsOfValor/: boss_fenryr.cpp  boss_god_king_skovald.cpp  boss_hymdall.cpp  boss_hyrja.cpp  boss_odyn.cpp  halls_of_valor.cpp  halls_of_valor.hpp  instance_halls_of_valor.cpp
src/server/scripts/BrokenIsles/HavocArtifactFelsoulHoldScenario/: instance_scenario_havoc_artifact_felsoul_hold.cpp
src/server/scripts/BrokenIsles/MawOfSouls/: boss_harbaron.cpp  boss_helya.cpp  boss_ymiron_the_fallen_king.cpp  instance_maw_of_souls.cpp  maw_of_souls.cpp  maw_of_souls.hpp
src/server/scripts/BrokenIsles/NeltharionsLair/: boss_dargrul_the_underking.cpp  boss_naraxas.cpp  boss_rokmora.cpp  boss_ularogg_cragshaper.cpp  instance_neltharions_lair.cpp  neltharions_lair.cpp  neltharions_lair.hpp
src/server/scripts/BrokenIsles/PrecompiledHeaders/: BrokenIslesPCH.cpp  BrokenIslesPCH.h
src/server/scripts/BrokenIsles/ReturnToKarazhan/: boss_attumen_the_huntsman.cpp  boss_maiden_of_virtue.cpp  boss_mana_devourer.cpp  boss_moroes.cpp  boss_nightbane.cpp  boss_opera_hall.cpp  boss_shade_of_medivh.cpp  boss_the_curator.cpp  boss_vizaduum_the_watcher.cpp  gamesmans_room.cpp  instance_return_to_karazhan.cpp  return_to_karazhan.cpp  return_to_karazhan.hpp
src/server/scripts/BrokenIsles/SeatOfTriumvirate/: boss_lura.cpp  boss_saprish.cpp  boss_viceroy_nezhar.cpp  boss_zuraal.cpp  instance_seat_of_triumvirate.cpp  seat_of_triumvirate.cpp  seat_of_triumvirate.hpp
src/server/scripts/BrokenIsles/TheArcway/: boss_advisor_vandros.cpp  boss_corstilax.cpp  boss_general_xakal.cpp  boss_ivanyr.cpp  boss_naltira.cpp  instance_the_arcway.cpp  the_arcway.cpp  the_arcway.hpp
src/server/scripts/BrokenIsles/TheEmeraldNightmare/: boss_cenarius.cpp  boss_dragons_of_nightmare.cpp  boss_elerethe_renferal.cpp  boss_ilgynoth.cpp  boss_ilgynoth.hpp  boss_nythendra.cpp  boss_ursoc.cpp  boss_xavius.cpp  instance_the_emerald_nightmare.cpp  the_emerald_nightmare.hpp
src/server/scripts/BrokenIsles/TheNighthold/: boss_chronomatic_anomaly.cpp  boss_elisande.cpp  boss_guldan.cpp  boss_high_botanist_telarn.cpp  boss_krosus.cpp  boss_skorpyron.cpp  boss_spellblade_aluriel.cpp  (+6 more)
src/server/scripts/Kalimdor/: CMakeLists.txt  ashenvale.cpp  azshara.cpp  azuremyst_isle.cpp  bloodmyst_isle.cpp  darkshore.cpp  desolace.cpp  durotar.cpp  dustwallow_marsh.cpp  felwood.cpp  feralas.cpp  moonglade.cpp  mulgore.cpp  orgrimmar.cpp  silithus.cpp  southern_barrens.cpp  stonetalon_mountains.cpp  tanaris.cpp  teldrassil.cpp  the_barrens.cpp  thousand_needles.cpp  thunder_bluff.cpp  uldum.cpp  ungoro_crater.cpp  winterspring.cpp
src/server/scripts/Outland/: CMakeLists.txt  blades_edge_mountains.cpp  boss_doomlord_kazzak.cpp  boss_doomwalker.cpp  hellfire_peninsula.cpp  nagrand.cpp  netherstorm.cpp  shadowmoon_valley.cpp  shattrath_city.cpp  terokkar_forest.cpp  zangarmarsh.cpp
src/server/scripts/Pandaria/: CMakeLists.txt  boss_chi_ji.cpp  boss_galion.cpp  boss_nalak.cpp  boss_niuzao.cpp  boss_oondasta.cpp  boss_ordos.cpp  boss_sha_of_anger.cpp  boss_xuen.cpp  boss_yu_lon.cpp  dread_wastes.cpp  dread_wastes.h  isle_of_thunder.cpp  isle_of_thunder.h  jade_forest.cpp  jade_forest.h  krasarang_wilds.cpp  krasarang_wilds.h  kun_lai_summit.cpp  kun_lai_summit.h  the_veiled_stair.cpp  the_veiled_stair.h  timeless_isle.cpp  timeless_isle.h  townlong_steppes.cpp  townlong_steppes.h  vale_of_eternal_blossoms.cpp  vale_of_eternal_blossoms.h  valley_of_the_four_winds.cpp  valley_of_the_four_winds.h
src/tools/vmap4_extractor/: CMakeLists.txt  DB2.h  gameobject_extract.cpp  vmapexport.cpp  vmapexport.h  wmo.cpp
(+1922 files in other folders)
